--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
     <div class="background">
         <div class="highway"></div>
         <div class="highway1"></div>
+        <div class="truck">
+            <img src="images/truck.png" alt="truck">
+        </div>
+        <div class="car">
+            <img src="images/car.png" alt="truck">
+        </div>
     </div>
     
 </body>
 </html>
+
